# suckyear-bot

./: .env.development  .env.example  .env.production  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.db
backend/: .env.example  Dockerfile  README.md  alembic.ini  debug_imports.py  docker-entrypoint.sh  pyproject.toml  settings.py  supervisord.conf
backend/api/: main.py
backend/api/middlewares/: docs_blocker.py
backend/api/routers/: __init__.py
backend/api/routers/v1/: __init__.py  app.py  bot.py  posts.py  tags.py  users.py
backend/api/routers/v2/: __init__.py
backend/bot/: commandsworker.py  main.py
backend/bot/core/: instance.py
backend/bot/handlers/: README.md  __init__.py  _fails.py  base.py  help.py  main.py
backend/bot/keyboards/: menu.json  menu.py
backend/bot/locales/: localization.py
backend/bot/locales/old/: _errors.ftl  _strings.ftl
backend/bot/locales/ru/: strings.ftl
backend/bot/middlewares/: __init__.py  db.py  l10n.py  user.py
backend/bot/utils/: clear_webhook.py  exceptions.py
backend/shared/database/: commands.py  session.py
backend/shared/exceptions/: posts.py  tags.py  users.py
backend/shared/migrations/: env.py
backend/shared/models/: README.md  __init__.py  base.py  entity_relationship_diagram.md  fails.py  post_tags.py  posts.py  tags.py  types.py  users.py  votes.py
backend/shared/schemas/: __init__.py  base.py  fails.py  posts.py  tags.py  users.py
backend/shared/services/: README.md  __init__.py  _menu.py  base.py  fails.py  posts.py  tags.py  users.py
bot/: main.py  (+2 more)
(+152 files in other folders)
